source/stylesheets/screen.css.scss
@charset "utf-8";
@import url(https://fonts.googleapis.com/css?family=Open+Sans);
@import 'normalize';
@import 'compass';
@import 'variables';
@import 'syntax';
@import 'icon-font';

/*
Copyright 2008-2013 Concur Technologies, Inc.

Licensed under the Apache License, Version 2.0 (the "License"); you may
not use this file except in compliance with the License. You may obtain
a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
License for the specific language governing permissions and limitations
under the License.
*/

// dwolla stuff

.notification {
    height: 44px;
    background: $color-black-dark;
    text-align: center;
    float: left;
    position: absolute;
    z-index: 100;
    width: 100%;
    top: -44px;

    a {
        color: $color-blue;
        text-decoration: none;
        position: relative;
        top:13px;

        span {
            margin-right: 10px;
            padding: 4px 10px;
            background: $color-black;
            border-radius: 3px;
            text-transform: uppercase;
        }
    }
}

////////////////////////////////////////////////////////////////////////////////
// GENERAL STUFF
////////////////////////////////////////////////////////////////////////////////

html, body {
  color: $main-text;
  padding: 22px 0 0 0;
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  @extend %default-font;
  background-color: $main-bg;
  height: 100%;
  -webkit-text-size-adjust: none; /* Never autoresize text */
}

////////////////////////////////////////////////////////////////////////////////
// TABLE OF CONTENTS
////////////////////////////////////////////////////////////////////////////////

#toc > ul > li > a > span {
  float: right;
  background-color: #2484FF;
  border-radius: 40px;
  width: 20px;
}

@mixin embossed-bg {
  
}

.tocify-wrapper {
  @include transition(left ease-in-out 0.3s);
  overflow-y: auto;
  overflow-x: hidden;
  position: fixed;
  z-index: 30;
  top: 0;
  left: 0;
  bottom: 0;
  width: $nav-width;
  background-color: $nav-bg;
  font-size: 13px;
  font-weight: bold;

  // language selector for mobile devices
  .lang-selector {
    display: none;
    a {
      padding-top: 0.5em;
      padding-bottom: 0.5em;
    }
  }

  // This is the logo at the top of the ToC
  &>img {
    display: block;
  }

  &>.search {
    position: relative;

    input {
      background: $nav-bg;
      border-width: 0 0 1px 0;
      border-color: $search-box-border-color;
      padding: 6px 0 6px 20px;
      @include box-sizing(border-box);
      margin: $nav-v-padding $nav-padding;
      width: $nav-width - 30;
      outline: none;
      color: $nav-text;
      border-radius: 0; /* ios has a default border radius */
    }

    &:before {
      position: absolute;
      top: 17px;
      left: $nav-padding;
      color: $nav-text;
      @extend %icon-search;
    }
  }

  img+.tocify {
    margin-top: $logo-margin;
  }

  .search-results {
    margin-top: 0;
    @include box-sizing(border-box);
    height: 0;
    overflow-y: auto;
    overflow-x: hidden;
    @include transition-property(height margin);
    @include transition-duration(180ms);
    @include transition-timing-function(ease-in-out);
    &.visible {
      height: 30%;
      margin-bottom: 1em;
    }

    @include embossed-bg;

    li {
      margin: 1em $nav-padding;
      line-height: 1;
    }

    a {
      color: $nav-text;
      text-decoration: none;

      &:hover {
        text-decoration: underline;
      }
    }
  }


  .tocify-item>a, .toc-footer li {
    padding: 0 $nav-padding 0 $nav-padding;
    display: block;
    overflow-x: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
  }

  // The Table of Contents is composed of multiple nested
  // unordered lists.  These styles remove the default
  // styling of an unordered list because it is ugly.
  ul, li {
    list-style: none;
    margin: 0;
    padding: 0;
    line-height: 28px;
  }

  li {
    color: $nav-text;
    @include transition-property('background');
    @include transition-timing-function('linear');
    @include transition-duration(230ms);
  }

  // This is the currently selected ToC entry
  .tocify-focus {
    @include box-shadow(0px 1px 0px $nav-active-shadow);
    background-color: $nav-active-bg;
    color: $nav-active-text;
  }

  // Subheaders are the submenus that slide open
  // in the table of contents.
  .tocify-subheader {
    display: none; // tocify will override this when needed
    background-color: $nav-subitem-bg;
    font-weight: 500;
    
    .tocify-item>a {
      padding-left: $nav-padding + $nav-indent;
      font-size: 12px;
    }

    // for embossed look:
    @include embossed-bg;
    &>li:last-child {
      box-shadow: none; // otherwise it'll overflow out of the subheader
    }
  }

  .toc-footer {
    padding: 1em 0;
    margin-top: 1em;
    border-top: 1px solid $nav-footer-border-color;

    li,a {
      color: $nav-text;
      text-decoration: none;
    }

    a:hover {
      text-decoration: underline;
    }

    li {
      font-size: 0.8em;
      line-height: 1.7;
      text-decoration: none;
    }
  }

}
/* ... */

